--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img class="pro2" src="images/image.png" alt="suvigya profile picture">
+      <img class="pro2" src="images/mypic.png" alt="suvigya profile picture">
       <h2>Hello.</h2>
       <p class="text">I am a Web Developer. I'm the founder <br> and CMD of Astroindusoot. I love ☕ Chai, so let's sit for a <br>cup of tea.</p>
     </div>
